<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AirCouchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:elevation="0dip">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:theme="@style/MyToolbar">
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <EditText
                android:id="@+id/aircouchTitle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:hint="@string/hint_aircouchTitle"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/aircouchAddress"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:hint="@string/hint_aircouchAddress"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/spacesAvailable"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:hint="@string/hint_spacesAvailable"
                android:inputType="number"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="387dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="32dp">

                <AutoCompleteTextView
                    android:id="@+id/Type"
                    android:layout_width="378dp"
                    android:layout_height="42dp"
                    android:layout_margin="1dp"
                    android:autofillHints=""
                    android:inputType="none"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:text="Type"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_addAirCouch"
                android:background="@color/design_default_color_secondary_variant"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="16sp" />

            <Button
                android:id="@+id/chooseImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/button_addImage"
                android:background="@color/design_default_color_secondary_variant"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/aircouchImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"/>

            <Button
                android:id="@+id/aircouchLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_location"
                android:background="@color/design_default_color_secondary_variant"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/design_default_color_secondary_variant"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_del"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="16sp" />
        </LinearLayout>
        </ScrollView>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>